manifest/prod/ingress_prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - secretName: tls-brief8
  rules:
  - host: brief8.uncia.fr
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: voteapp
            port:
              number: 80
